--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "predeploy": "npm run build && copy .gitignore dist\\"
   },
   "dependencies": {
+    "@google/genai": "^1.33.0",
     "@particle-network/aa": "^2.0.2",
     "@particle-network/authkit": "^2.1.1",
     "@particle-network/chains": "^1.8.3",
